Update server configuration, tests and README.md